--- a/Index.html
+++ b/Index.html
@@ -1,67 +1,21 @@
-const defDiv = document.getElementById('definition');
-const guessInput = document.getElementById('guess');
-const submitBtn = document.getElementById('submitGuess');
-const resultDiv = document.getElementById('result');
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Word Guessing Game</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Guess the Word!</h1>
+  <p id="definition">Loading...</p>
 
-let currentWord = "";
+  <input id="guess" type="text" placeholder="Type your guess...">
+  <button id="submitGuess">Submit</button>
 
-async function fetchRandomWord() {
-  try {
-    const resp = await fetch('https://random-word-api.vercel.app/api?words=1');
-    const data = await resp.json();
-    return Array.isArray(data) ? data[0] : null;
-  } catch {
-    return null;
-  }
-}
+  <p id="result"></p>
 
-async function fetchDefinition(word) {
-  try {
-    const resp = await fetch(`https://api.dictionaryapi.dev/api/v2/entries/en/${word}`);
-    const data = await resp.json();
-    if (Array.isArray(data) && data[0]?.meanings?.length) {
-      return data[0].meanings[0].definitions[0].definition;
-    }
-    return null;
-  } catch {
-    return null;
-  }
-}
+  <script src="script.js"></script>
+</body>
+</html>
 
-async function loadWord() {
-  defDiv.textContent = "Loading...";
-  currentWord = await fetchRandomWord();
-  let definition = null;
-
-  if (currentWord) {
-    definition = await fetchDefinition(currentWord);
-  }
-
-  if (!currentWord || !definition) {
-    currentWord = "error";
-    defDiv.textContent = "something went wrong fetching the word.";
-  } else {
-    defDiv.textContent = definition;
-  }
-
-  resultDiv.textContent = "";
-  guessInput.value = "";
-}
-
-submitBtn.addEventListener("click", () => {
-  const guess = guessInput.value.trim().toLowerCase();
-  if (!currentWord || currentWord === "error") {
-    resultDiv.textContent = "⚠️ Can't play this round (error).";
-    return;
-  }
-
-  if (guess === currentWord.toLowerCase()) {
-    resultDiv.textContent = "✅ Correct!";
-  } else {
-    resultDiv.textContent = `❌ Wrong! The word was: ${currentWord}`;
-  }
-
-  setTimeout(loadWord, 3000);
-});
-
-loadWord();
